cambio de color en los oradores

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link active" style="color: white;" href="#">La conferencia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color:gray;" href="#">Lo oradores</a>
+                <a class="nav-link" style="color:rgb(187, 45, 45);" href="#">Lo oradores</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" style="color: gray;" href="#">El lugar y la fecha</a>
